--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,11 @@ pipeline {
     agent any
     
     stages {
+      stage('Clonerepo') {
+          steps {
+            sh 'git clone'
+          }
+     }
       stage('Build') {
           steps {
             echo 'this is the build stage'
